Refactor: removed deprecated URL Constructor